--- a/package.json
+++ b/package.json
@@ -27,8 +27,14 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.326.0",
     "@aws-sdk/client-s3": "^3.326.0",
+    "@fastify/cookie": "^8.3.0",
+    "@fastify/swagger": "^8.3.1",
+    "@fastify/swagger-ui": "^1.8.1",
+    "@fastify/type-provider-json-schema-to-ts": "^2.2.2",
     "dotenv": "^16.0.3",
+    "dynamo-tools": "github:shawnrushefsky/dynamo-tools",
     "fastify": "^4.17.0",
+    "json-schema-to-ts": "^2.8.0",
     "sharp": "^0.32.1"
   }
 }
