--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.3",
+    "@types/uuid": "^9.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "typescript": "^5.0.4"
@@ -35,6 +37,8 @@
     "dynamo-tools": "github:shawnrushefsky/dynamo-tools",
     "fastify": "^4.17.0",
     "json-schema-to-ts": "^2.8.0",
-    "sharp": "^0.32.1"
+    "jsonwebtoken": "^9.0.0",
+    "sharp": "^0.32.1",
+    "uuid": "^9.0.0"
   }
 }
