--- a/.env.test
+++ b/.env.test
@@ -2,7 +2,9 @@ AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=test
 AWS_SECRET_ACCESS_KEY=test
 DYNAMODB_ENDPOINT=http://localhost:8000
+S3_ENDPOINT=http://localhost:4566
 IMAGE_TABLE=images
+IMAGE_BUCKET=images
 WEBHOOK_PUBLIC_KEY_PATH=./test/fixtures/webhook_key.pub
 WEBHOOK_PRIVATE_KEY_PATH=./test/fixtures/webhook_key
 SESSION_PUBLIC_KEY_URL=http://localhost:3000/.well-known/session-jwks.json
