--- a/dependencies.yml
+++ b/dependencies.yml
@@ -5,11 +5,13 @@ services:
     image: localstack/localstack:2.0.1
     ports:
       - "4566:4566" # LocalStack Gateway
-      - "4571:4571" # external services port range
+      # - "4571:4571" # external services port range
     environment:
       - DEBUG=${DEBUG-}
       - DOCKER_HOST=unix:///var/run/docker.sock
       - SERVICES=s3
+      - START_WEB=0
+      - PROVIDER_OVERRIDE_S3=v2
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
