add run with docker

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "npm run build && APP_ENV=test mocha --recursive dist/test",
     "build": "tsc",
     "start": "APP_ENV=local node dist/src/index.js",
-    "init-local": "APP_ENV=local npx run-func dist/init-local-aws.js createTable && APP_ENV=local npx run-func dist/init-local-aws.js createBucket"
+    "init-local": "APP_ENV=local npx run-func dist/init-local-aws.js createTable && APP_ENV=local npx run-func dist/init-local-aws.js createBucket",
+    "compose-up": "./scripts/up",
+    "compose-down": "./scripts/down"
   },
   "repository": {
     "type": "git",
