--- a/image-service.yml
+++ b/image-service.yml
@@ -14,6 +14,7 @@ services:
       - HOST=0.0.0.0
       - PORT=3000
       - DYNAMODB_ENDPOINT=http://dynamodb-local:8000
+      - S3_ENDPOINT=http://localstack:4566
     volumes:
       # There's a bunch of keys in the fixtures folder that we need to use
       - type: bind
